feat: Agregando empoint de Listar de Author

--- a/solucion/appsettings.json
+++ b/solucion/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "server=;port=;database=;uid=;password="
+    "MySqlConnection": "server=bx8qpwijt2vblzhgauup-mysql.services.clever-cloud.com;port=3306;database=bx8qpwijt2vblzhgauup;uid=u8vzvmgpfmvjqxl4;password=9UCjN3LyJ4L8Tqt7B3xZ"
   }
 }
 
